# news_changepoint_detection

./: LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  reproduce.txt
.github/workflows/: ci.yml
configs/evaluation/artificial_split/: confusion.yml  confusion_ff_embed_l180.yml  confusion_ff_embed_l90.yml  confusion_ff_tfidf_l180.yml  confusion_ff_tfidf_l90.yml  constant.yml  distilroberta.yml  tvd180.yml  tvd90.yml  tvd_lda.yml
configs/evaluation/guardian/: confusion.yml  constant.yml  distilroberta.yml  random.yml  tvd180.yml  tvd_lda.yml
configs/evaluation/guardian_extended/: confusion_ff_embed_l180.yml  confusion_ff_embed_l90.yml  confusion_ff_tfidf_l180.yml  confusion_ff_tfidf_l90.yml  distilroberta1_no_sign.yml  random_no_sign.yml  tvd180.yml  tvd180_no_sign.yml  tvd90.yml
configs/evaluation/guardian_months/: constant.yml  distilroberta.yml  distilroberta1.yml  tvd8.yml
configs/summary/: artificial_split.yml  generated.yml  guardian.yml  guardian_extended.yml  guardian_extended_no_sign.yml  guardian_months.yml  guardian_months_odd.yml
configs/training/artificial_split/: confusion.yml  constant.yml
configs/training/guardian/: confusion.yml
configs/training/multi/artificial_split/: confusion_ff_embed_l180.yml  (+4 more)
src/topic_transition/: __init__.py  data.py  evaluation.py  guardian.py  loss.py  model.py  preprocessing.py  summary_metrics.py  summary_plots.py  tvd.py  utils.py  vectorizers.py
src/topic_transition/data_sources/: __init__.py  guardian.py
src/topic_transition/models/: __init__.py  confusion.py
src/topic_transition/scripts/: __init__.py  evaluate_model.py  evaluate_tvd.py  fetch_guardian_data.py  generate_constant_indicators.py  generate_data_llm.py  generate_random_indicators.py  generate_summary_plots.py  summarize.py  summarize_metrics.py  train_on_multiple_datasets.py
src/topic_transition/training/: __init__.py  base.py  confusion.py
tests/: test_evaluation.py  test_loss.py  test_summary_metrics.py
(+15 files in other folders)
